Version <devel> released on <releaseDate>

Enhancements
 * Improved handling of an empty conf/pf.conf configuration file
 * Improved error reporting for dynamic uplink detection on Cisco
 * interface gateways are no longer required in configuration (#1447)
 * general.caching parameter removed from configuration
 * major refactoring, cleanup and dependencies removal

--------------------------------------------------------------------------------
Version <stable-version> released on <releaseDate>

--------------------------------------------------------------------------------
Version 3.4.1 released on 2012-06-18

Bug Fixes
 * Regression in interface, network, floating-device and violation management Admin and CLI (#1468)
 * Load-balancer support: Apache Access List are now updated to allow them to reach the portal
 * Debian: missing dependency preventing Apache (captive portal, webadmin) to start

Translations
 * Updated Brazilian Portuguese (pt_BR) translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.4.0 released on 2012-06-13

Security
 * Fixed a reflected cross-site scripting (XSS) vulnerability in Web Admin guest management (#1454)

New Hardware
 * H3C S5120 series supports MAC-Authentication and 802.1X with or without VoIP
 * Added Role support for all Cisco Wireless (WLC) models
 * Brocade 6400 series supports MAC-Authentication and 802.1X with or without VoIP
 * Brocade RF Switches support (Wireless controller)

New Features
 * debian packages (#1066, #1067, #1463)
 * Support for up to 100 custom VLANs (Defaults to 5 see relevant FAQ entry to enable more)
 * Node bulk importation now allow you to define default values for pid, category and voip in pf.conf
 * New graphics showing bandwidth consumed by os class and the top 25 bandwidth consumers

Enhancements
 * minor refactoring and cleanup
 * debian support: arp binary location now configurable ([services].arp_binary)